--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=trip-booking
+
+#DB connection
+spring.datasource.url=jdbc:mysql://localhost:3306/trip-booking?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=nikhil
+#driver settings
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#tomcat port
+server.port=8081
+#hibernate ddl setting
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
